<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19191b"
    tools:context=".RegActivity">


    <TextView
        android:id="@+id/TextReg"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/log_in"
        android:inputType="text"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toTopOf="@+id/gdRegTop"
        app:layout_constraintVertical_bias="0.058"
        tools:ignore="TextViewEdits" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/TextReg"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="151dp"
            android:layout_height="92dp"
            android:background="@drawable/images"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
            app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
            app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
            app:srcCompat="@drawable/images"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="131dp" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdRegLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdRegRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdRegTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdRegDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#434343"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="#7AFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#434343"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="#7AFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#434343"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="#7AFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#434343"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="#7AFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#434343"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="#7AFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="#1BC8B8"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gdRegDown"
        app:layout_constraintEnd_toStartOf="@+id/gdRegRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdRegLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />
</androidx.constraintlayout.widget.ConstraintLayout>